--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         </div>
         <div class="right__block">
             <div class="up-box">
-                <h1 class= "up-box_h1-title">Ana & David</h1>
+                <h1 class= "up-box_h1-title popo">Ana & David</h1>
                 <h5 class="up-box_h5-title">We are getting married</h5>
                 <img class="separator" src="src/img/Saparator.png" alt="">
                 <h3 class="up-box_h3-title">Carina Park</h3>
@@ -353,20 +353,20 @@
                 <label for="name" class="form__label">Name</label>
             </div>
             <div class="form__group field right__side">
-                <input type="input" class="form__field" placeholder="Name" name="name" id='name' required />
-                <label for="name" class="form__label">Email</label>
+                <input type="input" class="form__field" placeholder="Name" name="name" id='surname' required />
+                <label for="surname" class="form__label">Email</label>
             </div>
             <div class="form__group field">
-                <input type="input" class="form__field" placeholder="Name" name="name" id='name' required />
-                <label for="name" class="form__label">Number of Guests</label>
+                <input type="input" class="form__field" placeholder="Name" name="name" id='guests' required />
+                <label for="guests" class="form__label">Number of Guests</label>
             </div>
             <div class="form__group field right__side">
-                <input type="input" class="form__field" placeholder="Name" name="name" id='name' required />
-                <label for="name" class="form__label">Attending Events</label>
+                <input type="input" class="form__field" placeholder="Name" name="name" id='events' required />
+                <label for="events" class="form__label">Attending Events</label>
             </div>
             <div class="form__group field form__group--message">
-                <input type="input" class="form__field" placeholder="Name" name="name" id='name' required />
-                <label for="name" class="form__label">Message</label>
+                <input type="input" class="form__field" placeholder="Name" name="name" id='mes' required />
+                <label for="mes" class="form__label">Message</label>
             </div>
             <button class="button">I am Attending</button>
         </div>
